<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pentru_a_posta_anunturi_trebuie_sa_va_loga_ti"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/lay_login"
        android:id="@+id/text_warning"
        android:textColor="@color/red">

    </TextView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/lay_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_warning"
        app:layout_constraintBottom_toTopOf="@id/lay_parola">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/login"/>

        <Space
            android:layout_width="87dp"
            android:layout_height="match_parent"/>

        <EditText
            android:layout_width="166dp"
            android:layout_height="match_parent"
            android:inputType="text"
            android:id="@+id/edit_login"
            android:importantForAutofill="no"
            tools:ignore="LabelFor"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lay_parola"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lay_login"
        app:layout_constraintBottom_toBottomOf="@id/lay_butoane">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/password"/>

        <Space
            android:layout_width="107dp"
            android:layout_height="match_parent"/>

        <EditText
            android:layout_width="166dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:id="@+id/edit_parola"
            android:importantForAutofill="no"
            tools:ignore="LabelFor" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/lay_butoane"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lay_parola"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/creaza_cont"
            android:id="@+id/btn_creaza_cont"
            android:onClick="clickCREAZA_CONT" />

        <Space
            android:layout_width="115dp"
            android:layout_height="match_parent"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_in"
            android:id="@+id/btn_log_in"
            android:onClick="clickLOG_IN"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>